<resources>
    <string name="app_name">EatWit</string>

    <string name="startSida">Välkommen!</string>
    <string name="sida_2">Sida2 Min mat kalender</string>
    <string name="sida_3">Sida 3</string>

    <string name="action_settings">Settings</string>
    <string name="btn_sida2">Fortsätt</string>
    <string name="sida3_btnTxt">Till sida 3</string>

    <string name="swipe_title1">Sida 1 på swipe</string>
    <string name="swipe_title2">Sida 2 på Swipe</string>
    <string name="swipe_title3">Sida 3 på swipe</string>
    <string name="camera_title">kamera</string>
    <string name="kamera">kamera</string>




    <string name="email">Email</string>
    <string name="password">Lösenord</string>
    <string name="hint_name">Förnamn och efternamn</string>
    <string name="login_btn">LOGGA IN</string>
    <string name="btn_register">REGISTERA DIG</string>
    <string name="reg_btn">Inte medlem? Registrera dig nu.</string>
    <string name="btn_link_to_login">Är du redan medlem? Logga in här.</string>
    <string name="welcome">Välkommen</string>
    <string name="logout_btn">LOGGA UT</string>
    <string name="name">Fullname</string>
    <string name="err_alla_falt">Vänligen fyll i alla fält</string>
    <string name="msg_logga_in">Loggar in ...</string>
    <string name="reg_lyckades">Registrering lyckad. Du kan nu logga in!</string>


    <string name="pic_save">Bild sparad!</string>
    <string name="save_btn">Spara</string>

    <string-array name="array_typ_maltid">
        <item>Huvudrätt</item>
        <item>Lunch</item>
        <item>Efterrätt</item>
        <item>Mellanmål</item>
        <item>Sallad</item>
    </string-array>

    <string-array name="measure_spinner">
        <item>st</item>
        <item>krm</item>
        <item>tsk</item>
        <item>dsk</item>
        <item>msk</item>
        <item>g</item>
        <item>hg</item>
        <item>kg</item>
        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>l</item>

    </string-array>

    <string-array name="amount_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>l2</item>
        <item>l3</item>
        <item>l4</item>
        <item>l5</item>

    </string-array>

    <string-array name="ingredienser">
        "Mjöl","Socker","Smör","Ägg","Bakpulver","Vaniljsocker","Vanilj","Cocao"

    </string-array>




    <string name="btn_txt_mina_recept">mina recept</string>
    <string name="btn_txt_nytt_recept">nytt recept</string>
    <string name="btn_txt_alla_recept">alla recept</string>
    <string name="tid">t:m</string>


</resources>
