<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button android:id="@+id/btn_alla_recept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_alla_recept"
        android:layout_marginTop="25dip"/>

    <Button android:id="@+id/btn_nytt_recept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_nytt_recept"
        android:layout_marginTop="25dip"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_mina_recept"
        android:id="@+id/btn_mina_recept"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
