<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo_eatwit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@drawable/rounded_corner"
            android:drawableLeft="@drawable/user_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_above="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_marginTop="25dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@drawable/rounded_corner"
            android:drawableLeft="@drawable/pass_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_marginBottom="25dp"
            android:layout_above="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:background="@drawable/login_button_green"
            android:textColor="@color/color_green_logo"
            android:layout_marginBottom="5dp"
            android:layout_above="@+id/btnLinkToRegisterScreen"
            android:layout_centerHorizontal="true" />

        <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/reg_btn"
        android:textAllCaps="false"
        android:textColor="@color/color_green_logo"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>